--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,7 +6,7 @@
 			<div class="navbar-brand">
 				<a class="navbar-item" href="/"> <img src="img/icon.png"
 					width="28" height="28">
-				</a> <a class="navbar-item" href="/">Alovoa </a>
+				</a> <a class="navbar-item" href="/" id="navbar-text">Alovoa </a>
 			</div>
 
 			<div style="width: 100%; display: flex;">
@@ -87,6 +87,11 @@
 				<a class="navbar-item is-expanded navigation-item">
 					<div>
 						<i class="fa fa-bell"></i> <span>Alerts</span>
+					</div>
+				</a> 
+				<a class="navbar-item is-expanded navigation-item">
+					<div>
+						<i class="fa fa-comments"></i> <span>Chats</span>
 					</div>
 				</a> 
 				<a class="navbar-item is-expanded navigation-item">
