--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -9,6 +9,7 @@
 <link rel="manifest" href="/json/manifest.json">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
+<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <title>Profile</title>
 </head>
@@ -17,14 +18,110 @@
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<div class="section">
 			<div class="container">
+				<div class="field">
+					<div class="columns is-mobile is-centered">
+						<div class="column is-half center-children">
+
+							<img id="profilePicture" src="/img/profile.jpg"
+								style="cursor: pointer;" height=400 width="400"
+								th:unless="${user.profilePicture}" /> <img id="profilePicture"
+								style="cursor: pointer;" height=400 width="400"
+								th:if="${user.profilePicture}" th:src="${user.profilePicture}" />
+							<input id="profilePictureUpload" type="file" accept="image/*"
+								style="display: none">
+						</div>
+					</div>
+				</div>
+				<div class="field">
+					<label class="label">Description</label>
+					<textarea class="textarea" id="description"
+						th:text="${user.description}"></textarea>
+				</div>
+
+				<div class="field">
+					<label class="label">I want...</label>
+					<div class="select">
+						<select id="intention">
+							<option value=""></option>
+							<th:block th:each="intention : ${intentions}">
+								<option th:value="${intention.id}"
+									th:selected="${user.intention != null && user.intention.id == intention.id}"
+									th:if="${intention.text == 'meet'}">to meet new people</option>
+								<option th:value="${intention.id}"
+									th:selected="${user.intention != null && user.intention.id == intention.id}"
+									th:if="${intention.text == 'date'}">a relationship</option>
+								<option th:value="${intention.id}"
+									th:selected="${user.intention != null && user.intention.id == intention.id}"
+									th:if="${intention.text == 'sex'}">sexual intimacy</option>
+							</th:block>
+						</select>
+					</div>
+				</div>
+
+				<div class="field">
+					<div class="columns">
+						<div class="column">
+							<label class="label">Minimum Age</label>
+							<div class="slider-container">
+								<input class="slider" step="1" min="16" max="100"
+									th:value="${user.preferedMinAge}" type="range"
+									id="min-age-slider">
+								<p id="min-age-display" th:text="${user.preferedMinAge}"></p>
+							</div>
+						</div>
+						<div class="column">
+							<label class="label">Maximum Age</label>
+							<div class="slider-container">
+								<input class="slider" step="1" min="16" max="100"
+									th:value="${user.preferedMaxAge}" type="range"
+									id="max-age-slider">
+								<p id="max-age-display" th:text="${user.preferedMaxAge}"></p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="field">
+					<label class="label">Looking for</label>
+					<!-- 
+					<div class="field">
+						<input id="male" type="checkbox" class="switch"
+							style="position: absolute"> <label for="male">Male</label>
+					</div>
+					<div class="field">
+						<input id="female" type="checkbox" class="switch"
+							style="position: absolute"> <label for="female">Female</label>
+					</div>
+					-->
+					<!-- 
+					<div class="other">
+						<input id="other" type="checkbox" class="switch"
+							style="position: absolute"> <label for="other">Other</label>
+					</div>
+					 -->
+					 
+					<th:block th:each="gender : ${genders}">
+						<div class="field">
+						<input th:id="${'gender-' + gender.id}" type="checkbox" class="switch gender-switch" th:value="${gender.id}"
+							style="position: absolute"
+							th:checked="${user.preferedGenders != null && not user.preferedGenders.?[id == __${gender.id}__].isEmpty()}"> 
+							<label th:for="${'gender-' + gender.id}" th:if="${gender.text == 'male'}">Male</label>
+							<label th:for="${'gender-' + gender.id}" th:if="${gender.text == 'female'}">Female</label>
+							<label th:for="${'gender-' + gender.id}" th:if="${gender.text == 'other'}">Other</label>
+						</div>
+					</th:block>
+				</div>
+				<div style="padding-top: 8px;"></div>
 			</div>
 		</div>
 	</div>
-	
+
 	<footer th:replace="fragments.html::navigation"></footer>
 	<footer th:replace="fragments.html::footer"></footer>
-	
+
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/profile.js"></script>
 </body>
 </html>
