--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -62,9 +62,9 @@
 							<div class="select">
 								<select name="gender" required>
 									<option value=""></option>
-									<option value="m">Male</option>
-									<option value="f">Female</option>
-									<option value="o">Other</option>
+									<option value="0">Male</option>
+									<option value="1">Female</option>
+									<option value="2">Other</option>
 								</select>
 							</div>
 						</div>
@@ -74,34 +74,12 @@
 							<div class="select">
 								<select name="intention" required>
 									<option value=""></option>
-									<option value="meet">to meet new people</option>
-									<option value="relationship">a relationship</option>
-									<option value="sex">sexual intimacy</option>
+									<option value="0">to meet new people</option>
+									<option value="1">a relationship</option>
+									<option value="2">sexual intimacy</option>
 								</select>
 							</div>
-						</div>
-
-						<!-- 
-						<div class="field">
-							<label class="label">Looking for</label>
-							<div class="field">
-
-								<input id="male" type="checkbox" name="male" class="switch"
-									style="position: absolute"> <label for="male">Male</label>
-							</div>
-							<div class="field">
-								<input id="female" type="checkbox" name="female" class="switch"
-									style="position: absolute"> <label for="female">Female</label>
-							</div>
-							<div class="other">
-								<input id="other" type="checkbox" name="other" class="switch"
-									style="position: absolute"> <label for="other">Other</label>
-							</div>
-						</div>
-						
-						
-						 -->
- 
+						</div> 
  						<div class="field">
  							<label class="label">Captcha</label>
  						
