--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -74,27 +74,27 @@
 		<nav class="navbar is-link is-fixed-bottom" role="navigation"
 			style="display: block;">
 			<div class="navbar-brand">
-				<a class="navbar-item is-expanded navigation-item">
+				<a class="navbar-item is-expanded navigation-item" href="/search">
 					<div>
-						<i class="fa fa-search"></i><span>Find</span>
+						<i class="fa fa-search"></i><span>Search</span>
 					</div>
 				</a> 
-				<a class="navbar-item is-expanded navigation-item">
+				<a class="navbar-item is-expanded navigation-item" href="/donate">
 					<div>
-						<i class="fa fa-coins"></i><span>Donations</span>
+						<i class="fa fa-coins"></i><span>Donate</span>
 					</div>
 				</a> 
-				<a class="navbar-item is-expanded navigation-item">
+				<a class="navbar-item is-expanded navigation-item" href="/alerts">
 					<div>
 						<i class="fa fa-bell"></i> <span>Alerts</span>
 					</div>
 				</a> 
-				<a class="navbar-item is-expanded navigation-item">
+				<a class="navbar-item is-expanded navigation-item" href="/chats">
 					<div>
 						<i class="fa fa-comments"></i> <span>Chats</span>
 					</div>
 				</a> 
-				<a class="navbar-item is-expanded navigation-item">
+				<a class="navbar-item is-expanded navigation-item" href="/profile">
 					<div>
 						<i class="fa fa-user"></i> <span>Profile</span>
 					</div>
