--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -18,6 +18,16 @@ svg {
 	width: 100%;
 }
 
+.asterisk {
+	padding-left: 4px;
+	color: red;
+}
+
+.register-warning {
+	color: red;
+	padding-bottom: 8px;
+}
+
 .navbar {
 	display: flex;
 }
@@ -57,6 +67,21 @@ svg {
 
 .slider-container p {
 	padding-left: 8px;
+}
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
+
+.full-width {
+	width: 100%;
+}
+input[type=range].slider {
+	margin: initial;
 }
 
 @media screen and (max-width: 400px) {
