--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -44,63 +44,14 @@
 				<div>
 
 					<label class="label">Search</label>
-					<button class="button is-info">
+					<button class="button is-info" onclick="search()">
 						<i class="fa fa-search"></i>
 					</button>
 				</div>
 			</div>
 		</div>
 
-		<section class="container">
-			<div class="card is-horizontal">
-				<div class="card-image">
-					<figure class="image">
-						<img src="https://via.placeholder.com/800">
-					</figure>
-				</div>
-				<div class="card-content">
-					<div class="content">
-						<div class="media">
-							<div class="full-width">
-								<div class="left" style="font-size: 2em">John Smith</div>
-								<div class="right" style="font-size: 1.5em">
-									<span>Age: </span><span>33</span>
-								</div>
-							</div>
-						</div>
-						<div class="media">
-							<div class="full-width">
-								<div class="left" style="font-size: 1.2em">
-									<span>Last active: </span><span>2016-08-11</span>
-								</div>
-								<div class="right" style="font-size: 1.2em">
-									<span>33000</span><span> meters from you</span>
-								</div>
-							</div>
-						</div>
-
-						<div style="font-size: 1.1em">LLorem ipsum dolor sit amet,
-							consectetur adipiscing elit. Phasellus nec iaculis mauris. Lorem
-							ipsum dolor sit amet, consecradipiscing elit. Phasellus nec
-							iaculis mauris.Lorem ipsum dolor sit sdipiscing. Phasellus nec
-							iaculis mauris.amet, consectetur adipi</div>
-					</div>
-					<div class="profile-bottom full-width"
-						style="display: inline-block;">
-						<button class="button left is-info is-inverted">View
-							profile</button>
-						<div class="right">
-							<button class="button is-rounded is-danger">
-								<i class="fa fa-thumbs-down"></i>
-							</button>
-							<button class="button is-rounded is-success">
-								<i class="fa fa-thumbs-up"></i>
-							</button>
-						</div>
-					</div>
-				</div>
-
-			</div>
+		<section class="container" id="main-container">
 		</section>
 	</div>
 
