Fixed bugs in registration Added detail view of users

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
 				<div class="container has-text-centered">
 					<h1 class="title is-size-1">Alovoa</h1>
 					<h2 class="subtitle is-size-4">The platform that is
-						specifically built for to meet new people and form relationships</h2>
+						specifically built for meeting new people and forming relationships</h2>
 				</div>
 			</div>
 		</section>
