--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,8 +27,8 @@
 	<div th:fragment="header-logged-in">
 		<nav class="navbar is-info">
 			<div class="navbar-brand">
-				<a class="navbar-item"> <img src="img/icon.png"
-					width="28" height="28">
+				<a class="navbar-item"> <img src="img/icon.png" width="28"
+					height="28">
 				</a> <a class="navbar-item">Alovoa </a>
 			</div>
 
@@ -78,23 +78,19 @@
 					<div>
 						<i class="fa fa-search"></i><span>Search</span>
 					</div>
-				</a> 
-				<a class="navbar-item is-expanded navigation-item" href="/donate">
+				</a> <a class="navbar-item is-expanded navigation-item" href="/donate">
 					<div>
 						<i class="fa fa-coins"></i><span>Donate</span>
 					</div>
-				</a> 
-				<a class="navbar-item is-expanded navigation-item" href="/alerts">
+				</a> <a class="navbar-item is-expanded navigation-item" href="/alerts">
 					<div>
 						<i class="fa fa-bell"></i> <span>Alerts</span>
 					</div>
-				</a> 
-				<a class="navbar-item is-expanded navigation-item" href="/chats">
+				</a> <a class="navbar-item is-expanded navigation-item" href="/chats">
 					<div>
 						<i class="fa fa-comments"></i> <span>Chats</span>
 					</div>
-				</a> 
-				<a class="navbar-item is-expanded navigation-item" href="/profile">
+				</a> <a class="navbar-item is-expanded navigation-item" href="/profile">
 					<div>
 						<i class="fa fa-user"></i> <span>Profile</span>
 					</div>
@@ -102,53 +98,60 @@
 			</div>
 		</nav>
 	</div>
-	
+
 	<div th:fragment="search-users">
-		<div class="card is-horizontal" th:each="user : ${users}">
-				<div class="card-image">
-					<figure class="image">
-						<img th:src="${user.profilePicture}">
-					</figure>
-				</div>
-				<div class="card-content">
-					<div class="content">
-						<div class="media">
-							<div class="full-width">
-								<div class="left" style="font-size: 2em" th:text="${user.firstName}"></div>
-								<div class="right" style="font-size: 1.5em">
-									<span>Age: </span><span th:text="${user.age}"></span>
-								</div>
-							</div>
-						</div>
-						<div class="media">
-							<div class="full-width">
-								<div class="left" style="font-size: 1.2em">
-									<span>Last active: </span><span th:text="${#dates.format(user.activeDate, 'yyyy-MM-dd')}"></span>
-								</div>
-								<div class="right" style="font-size: 1.2em">
-									<span th:text="${user.distanceToUser}"></span><span> meters from you</span>
-								</div>
-							</div>
-						</div>
-
-						<div style="font-size: 1.1em" th:text="${user.description}"></div>
-					</div>
-					<div class="profile-bottom full-width"
-						style="display: inline-block;">
-						<button class="button left is-info is-inverted">View
-							profile</button>
-						<div class="right">
-							<button class="button is-rounded is-danger">
-								<i class="fa fa-thumbs-down"></i>
-							</button>
-							<button class="button is-rounded is-success">
-								<i class="fa fa-thumbs-up"></i>
-							</button>
-						</div>
-					</div>
-				</div>
-
+		<div class="card is-horizontal" th:each="user : ${users}" th:id="${user.idEncoded}"> 
+			<div class="card-image">
+				<figure class="image">
+					<img th:src="${user.profilePicture}">
+				</figure>
 			</div>
+			<div class="card-content">
+				<div class="content">
+					<div class="media">
+						<div class="full-width">
+							<div class="left" style="font-size: 2em"
+								th:text="${user.firstName}"></div>
+							<div class="right" style="font-size: 1.5em">
+								<span>Age: </span><span th:text="${user.age}"></span>
+							</div>
+						</div>
+					</div>
+					<div class="media">
+						<div class="full-width">
+							<div class="left" style="font-size: 1.2em">
+								<span>Last active: </span><span
+									th:text="${#dates.format(user.activeDate, 'yyyy-MM-dd')}"></span>
+							</div>
+							<div class="right" style="font-size: 1.2em">
+								<span th:text="${user.distanceToUser}"></span><span>
+									meters from you</span>
+							</div>
+						</div>
+					</div>
+
+					<div style="font-size: 1.1em" th:text="${user.description}"></div>
+				</div>
+				<div class="profile-bottom full-width"
+					style="display: inline-block;">
+					<button class="button left is-info is-inverted"
+						th:onclick="viewProfile([[${user.idEncoded}]])">View
+						profile</button>
+					<div class="right">
+						<button class="button is-rounded is-danger"
+							th:onclick="likeUser([[${user.idEncoded}]])">
+							<i class="fa fa-thumbs-down"></i>
+						</button>
+						<button class="button is-rounded is-success"
+							th:onclick="hideUser([[${user.idEncoded}]])">
+							<i class="fa fa-thumbs-up"></i>
+						</button>
+					</div>
+				</div>
+			</div>
+
+		</div>
 	</div>
+
 </body>
 </html>
