--- a/src/main/resources/static/css/messageDetail.css
+++ b/src/main/resources/static/css/messageDetail.css
@@ -37,6 +37,14 @@
 	color: white;
 }
 
+.message {
+	padding: 8px;
+	margin-right: 4px;
+	margin-left: 4px;
+	word-break: break-all;
+	max-width: 80%;
+}
+
 .profile-pic {
 	height: 80px;
 	width: 80px;
