--- a/src/main/resources/templates/messageDetail.html
+++ b/src/main/resources/templates/messageDetail.html
@@ -17,6 +17,7 @@
 <body>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
+		<input type="hidden" id="convo-id" th:value="${convoId}">
 		<section class="container" id="main-container">
 			<div class="section">
 				<div class="container" id="top">
@@ -32,7 +33,7 @@
 				<div class="container" style="width: 100%;" id="message-send-div">
 					 <input class="input is-medium is-rounded" type="text" id="message-send-input" placeholder="...">
 					 <div id="message-send-padding"></div>
-					 <button class="button is-info is-medium is-rounded" id="message-send-button"><i class="fa fa-paper-plane"></i></button>
+					 <button class="button is-info is-medium is-rounded" id="message-send-button" onclick="sendMessage()"><i class="fa fa-paper-plane"></i></button>
 				</div>
 			</div>
 		</section>
