--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -10,6 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
+<link rel="stylesheet" href="/css/search.css" />
 <title>Donate</title>
 </head>
 <body>
@@ -27,10 +28,14 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container">
+				<section class="container" id="main-container"></section>
+				<a class="button is-primary" style="width: 100%;" href="/donate-list"><i class="fa fa-hand-holding-usd"></i>Donate Now</a>
+			</div>
 		</div>
 
-		<section class="container" id="main-container">
-		</section>
+
 	</div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
