--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -173,9 +173,11 @@
 		<footer th:replace="fragments.html::footer"></footer>
 	</div>
 
-
 	<script src="/js/lib/fontawesome.all.js"></script>
+	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/service-worker.js"></script>
+	
+	<script src="/js/index.js"></script>
 	<script src="/js/service-worker-register.js"></script>
 </body>
 
