Alert on failed login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
 							<button class="button">Login</button>
 						</form>
 					</div>
-					
+
 					<p>
 						<!-- //TODO -->
 						<a href="/">Forgot Password</a>
@@ -55,5 +55,8 @@
 		</div>
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
+
+	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/login.js"></script>
 </body>
 </html>
